<resources>
    <string name="app_name">Calculator2</string>
    <string name="zero">0</string>
    <string name="zero1">0</string>
    <string name="clear">AC</string>
    <string name="back">Back</string>
    <string name="percent">%</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="double_zero">00</string>
    <string name="zero3">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="view">0</string>
    <string name="resultView">0</string>
</resources>